[package]
name = "FogSpace"
version = "0.1.0"
edition = "2024"

[dependencies]
czkawka_core = "9.0.0"
image = { version = "0.25.6", features = ["serde"] }
image_hasher = "3.0.0"
salvo = { version = "0.78.0", features = ["oapi", "sse", "affix-state"] }
serde = "1.0.219"
serde-aux = "4.7.0"
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["macros"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
crossbeam-channel = "0.5.15"
tokio-stream = "0.1.17"
uuid = {version = "1.16.0", features = ["serde", "v4"]}
dashmap = "6.1.0"
async-stream = "0.3.6"
